# mqtt-console-client

./: LICENSE  PKGBUILD  main.cpp  mqtt-console-client-1.0.5-1-x86_64.pkg.tar.zst
pkg/mqtt-console-client/: .BUILDINFO  .MTREE  .PKGINFO
src/mqtt-console-client-1.0.5/: CMakeLists.txt  README.md
